syntax = "proto2";

import 'nanopb.proto';

package blox;

message SetPointSimple {
  required int32 value = 1 [(nanopb).int_size = IS_16];
}
